# memoire

./: .gitignore  API_OCR_EXTENSIONS.md  CLAUDE.md  Cargo.toml  OCR_QUERIES_IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING_OCR_API.md  test-config.toml  test_ocr_queries.rs
.claude/: settings.local.json
docs/: API.md  Architecture.md  COMPONENTS.md  Master-Plan.md  PHASE_2_IMPLEMENTATION.md  Plan Phase 3.md  SECURITY.md  USER_GUIDE.md  phase 1.5.md  phase2.md  phase3-implementation.md
docs/api/: capture.md  database.md  encoder.md  recorder.md
docs/plans/: 2025-12-08-recording-ocr-pain-points.md
src/memoire-capture/: Cargo.toml
src/memoire-capture/src/: audio.rs  error.rs  lib.rs  monitor.rs  screen.rs
src/memoire-core/: Cargo.toml
src/memoire-core/src/: audio_indexer.rs  colored_logger.rs  config.rs  indexer.rs  lib.rs  main.rs  orchestrator.rs  recorder.rs  test_config.rs  tray.rs
src/memoire-db/: Cargo.toml
src/memoire-db/src/: error.rs  lib.rs  migrations.rs  queries.rs  schema.rs
src/memoire-ocr/: Cargo.toml
src/memoire-ocr/src/: engine.rs  error.rs  lib.rs  processor.rs
src/memoire-processing/: Cargo.toml
src/memoire-processing/src/: audio_encoder.rs  encoder.rs  lib.rs
src/memoire-stt/: Cargo.toml
src/memoire-stt/src/: download.rs  engine.rs  error.rs  lib.rs  mel.rs  tokenizer.rs
src/memoire-web/: Cargo.toml
src/memoire-web/src/: error.rs  lib.rs  server.rs  state.rs
src/memoire-web/src/routes/: api.rs  audio.rs  mod.rs  static_files.rs  video.rs
src/memoire-web/static/: app.js  index.html  style.css
