[package]
name = "memoire-capture"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
windows.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
image.workspace = true
chrono.workspace = true

# Audio capture
wasapi.workspace = true
hound.workspace = true
rubato.workspace = true
